test/js/testGDBus.js
@@ -99,7 +99,7 @@ Test.prototype = {
     },
 
     frobateStuff: function(args) {
-        return { hello: GLib.Variant.new('s', 'world') };
+        return { hello: new GLib.Variant('s', 'world') };
     },
 
     nonJsonFrobateStuff: function(i) {
@@ -178,7 +178,7 @@ Test.prototype = {
     echoAsync: function(parameters, invocation) {
 	var [someString, someInt] = parameters;
         Mainloop.idle_add(function() {
-            invocation.return_value(GLib.Variant.new('(si)', [someString, someInt]));
+            invocation.return_value(new GLib.Variant('(si)', [someString, someInt]));
             return false;
         });
     },
@@ -195,7 +195,7 @@ Test.prototype = {
 
     // variant
     get PropReadWrite() {
-        return GLib.Variant.new('s', this._propReadWrite.toString());
+        return new GLib.Variant('s', this._propReadWrite.toString());
     },
 
     set PropReadWrite(value) {
@@ -527,11 +527,11 @@ function testStructArray() {
 
 function testDictSignatures() {
     let someDict = {
-        aDouble: GLib.Variant.new('d', 10),
+        aDouble: new GLib.Variant('d', 10),
         // should be an integer after round trip
-        anInteger: GLib.Variant.new('i', 10.5),
+        anInteger: new GLib.Variant('i', 10.5),
         // should remain a double
-        aDoubleBeforeAndAfter: GLib.Variant.new('d', 10.5),
+        aDoubleBeforeAndAfter: new GLib.Variant('d', 10.5),
     };
     let theResult, theExcp;
     proxy.dictEchoRemote(someDict, function(result, excp) {
